<resources>
    <string name="app_name">HouseHold</string>
    <string name="title_activity_posts">PostsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_todo">TodoActivity</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="title_activity_lunch">LunchActivity</string>

    <string name="this_is_the_original_text">This is the original text</string>
    <string name="original_assignee">No assignee yet</string>
    <string name="add_todo">Add todo</string>
    <string name="add_new_todo">Új teendő hozzáadása</string>
    <string name="new_dialog">new dialog</string>
    <string name="dialog_message">Kérlek, vegyél fel egy új teendőt!</string>
    <string name="give_todoname">Teendő neve</string>
    <string name="give_todoassignee">Teendő felelőse</string>
    <string name="error_wrong_interface">Doesnt implement TodoHandler interface</string>
    <string name="add_new_event">Add new event</string>
    <string name="give_eventName">Esemény neve</string>
    <string name="choose_event_date">Időpont kiválasztása</string>
    <string name="choose_event_place">Helyszín kiválasztása</string>
    <string name="event_comment">Megjegyzés</string>
    <string name="add_program">Program hozzáadása</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_dashboard">Appearently, this is a blank dashboard.</string>

    <!-- BottomNavigation labels -->
    <string name="assign">Elvállalom</string>
    <string name="todos">Todos</string>
    <string name="events">Events</string>
    <string name="home">Home</string>
    <string name="lunch">Lunch</string>
    <string name="chat">Chat</string>
    <string name="log_out">Log out</string>
    <string name="enter_message">Enter message...</string>

</resources>
