<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/give_eventName" />

        <EditText
            android:id="@+id/eventComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_comment" />

        <TextView
            android:id="@+id/eventDateChooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="32dp"
            android:text="@string/choose_event_date"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/eventDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/date_picker_theme">
        </DatePicker>

        <TextView
            android:id="@+id/eventPlaceChooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="32dp"
            android:text="@string/choose_event_place"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>