<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/todo_liner_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/postCard"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/todo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_is_the_original_text"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/todo_assignee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_assignee"/>

            <Button
                android:id="@+id/assignForTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assign"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>